--- a/_config.yml
+++ b/_config.yml
@@ -68,22 +68,56 @@ research:
       focus on its development, transportation, deployment, maintenance and efficiency in space.
 
 partners:
-  - name: UCH
+  - name: Universidad de Chile
+    short:  UCH
     logo: uchile.png
     url: https://uchile.cl
 
-  - name: USACH
+  - name: Universidad de Santiago de Chile
+    short:  USACH
     logo: usach.png
     url: https://usach.cl
-  - name: PUCV
+
+  - name: Pontificia Universidad Catolica de Valpariso
+    short:  PUCV
     logo:
     url: https://www.pucv.cl/
+
+  - name: Universidad de Concepcion
+    short: UDEC
+    logo:
+    url: https://www.udec.cl/
+
+  - name: Universidad de La Serena
+    short: ULS
+    logo:
+    url: http://www.userena.cl/
+
+  - name: Comisión Chilena de Energía Nuclear
+    short: CCHEN
+    logo: cchen.png
+    url: https://www.cchen.cl/
+
+  - name: Universidad de Antofagasta
+    short: UA
+    logo:
+    url: http://www.uantof.cl/
+
+  - name: Universidad Catolica de la Santisima Concepcion
+    short: UCSC
+    logo:
+    url: https://www.ucsc.cl/
+
+  - name: Fundacion Biociencia
+    short: FB
+    logo: biociencia.png
+    url: http://www.bioscience.cl/
 
 projects:
   - name: SPEL
     area: Nanosatellites
     img: spel.jpg
-    url: https://spel.cl
+    url: http://spel.ing.uchile.cl/
 
   - name: ISCLab
     area: Software Engineering
