--- a/_config.yml
+++ b/_config.yml
@@ -269,7 +269,7 @@ team:
     degree: Aerospace engineering
     role: Ph.D. Student
     img: eobreque.jpg
-    url:
+    url: https://www.linkedin.com/in/elias-obreque-3b1b67106/
 
   - name: Samuel Gutierrez
     degree: Physics Engineer
