--- a/_config.yml
+++ b/_config.yml
@@ -251,7 +251,7 @@ team:
     degree: Electrical Engineer
     role: Engineer
     img: gdiaz.jpg
-    url:
+    url: https://cl.linkedin.com/in/gustavo-diaz-ingeniero-die
 
   - name: Tamara Gutierrez
     degree: Computer Sciences
